--- a/documentation/thesis/thesis_titleinformation.tex
+++ b/documentation/thesis/thesis_titleinformation.tex
@@ -8,7 +8,7 @@ of permanent magnets for low-field MRI systems}
 \autor{Marcel Werner Heinrich Friedrich Ochsendorf}
 \matrnr{3120232}
 \betreuer{Prof. Dr.-Ing. Thomas Dey}
-\cobetreuer{- TBD -}
+\cobetreuer{Prof. Dr.-Ing. Volkmar Schulz}
 \extbetreuer{}
 \datum{15.01.2024}
 \dank{}
