--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -2750,6 +2750,12 @@ with the same measurement parameters (magnet type, dimensions, sensor
 distance) as they correspond to the mechanical structure of the used
 hardware sensor \ref{d-fullsphere}.
 
+If the alternative filter algorithm from chapter
+\passthrough{\lstinline!Alternative Filter Algorithm Implementation!}
+\ref{alternative-filter-algorithm-implementation} is executed here, the
+same result is returned if the magnet measurement with \gls{id}
+\passthrough{\lstinline!5:0!} is used as the reference magnet.
+
 The filter algorithm implemented by the user was thus successfully
 executed using the user-programmable pipeline. The calculation result
 was successfully verified using raw measurement data and the final
