--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -28,6 +28,7 @@
 \newacronym{os}{OS}{Operating System}
 \newacronym{uuid}{UUID}{Universal Unique Identifier}
 \newacronym{nmr}{NMR}{Nuclear Magnetic Resonance}
+\newacronym{dut}{DUT}{Device Under Test}
 
 
 
