added two authors

--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -248,6 +248,64 @@ year = {01.01.2024},
 url = {https://docs.python.org/3/library/heapq.html},
 }
 
+@ARTICLE{OReilly2019-rn,
+  title     = "Three-dimensional {MRI} in a homogenous 27 cm diameter bore
+               Halbach array magnet",
+  author    = "O'Reilly, T and Teeuwisse, W M and Webb, A G",
+  journal   = "J. Magn. Reson.",
+  publisher = "Elsevier BV",
+  volume    =  307,
+  number    =  106578,
+  pages     = "106578",
+  month     =  oct,
+  year      =  2019,
+  language  = "en"
+}
+
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@ARTICLE{OReilly2021-ep,
+  title     = "In vivo {3D} brain and extremity {MRI} at 50 mT using a
+               permanent magnet Halbach array",
+  author    = "O'Reilly, Thomas and Teeuwisse, Wouter M and de Gans, Danny and
+               Koolstra, Kirsten and Webb, Andrew G",
+  abstract  = "PurposeTo design a low‐cost, portable permanent magnet‐based MRI
+               system capable of obtaining in vivo MR images within a
+               reasonable scan time.MethodsA discretized Halbach permanent
+               magnet array with a clear bore diameter of 27 cm was designed
+               for operation at 50 mT. Custom‐built gradient coils, RF coil,
+               gradient amplifiers, and RF amplifier were integrated and tested
+               on both phantoms and in vivo.ResultsPhantom results showed that
+               the gradient nonlinearity in the y‐direction and z‐direction was
+               less than 5\% over a 15‐cm FOV and did not need correcting. For
+               the x‐direction, it was significantly greater, but could be
+               partially corrected in postprocessing. Three‐dimensional in vivo
+               scans of the brain of a healthy volunteer using a turbo
+               spin‐echo sequence were acquired at a spatial resolution of 4
+               $\times$ 4 $\times$ 4 mm in a time of about 2 minutes. The
+               T1‐weighted and T2‐weighted scans showed a good degree of tissue
+               contrast. In addition, in vivo scans of the knee of a healthy
+               volunteer were acquired at a spatial resolution of about 3
+               $\times$ 2 $\times$ 2 mm within 12 minutes to show the
+               applicability of the system to extremity imaging.ConclusionThis
+               work has shown that it is possible to construct a low‐field MRI
+               unit with hardware components costing less than 10 000 Euros,
+               which is able to acquire human images in vivo within a
+               reasonable data‐acquisition time. The system has a high degree
+               of portability with magnet weight of approximately 75 kg,
+               gradient and RF amplifiers each 15 kg, gradient coils 10 kg, and
+               spectrometer 5 kg.",
+  journal   = "Magn. Reson. Med.",
+  publisher = "Wiley",
+  volume    =  85,
+  number    =  1,
+  pages     = "495--505",
+  month     =  jan,
+  year      =  2021,
+  copyright = "http://creativecommons.org/licenses/by/4.0/",
+  language  = "en"
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 % Bücher
 %%%%%%%%%%%%%%%%%%%%%%%%
