--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -306,6 +306,24 @@ url = {https://docs.python.org/3/library/heapq.html},
   language  = "en"
 }
 
+
+@book{Nitz2016,
+author="Nitz, Wolfgang R.",
+editor="Kramme, R{\"u}diger",
+title="Magnetresonanztomographie (MRT) -- Komponenten und Methoden",
+bookTitle="Medizintechnik: Verfahren - Systeme - Informationsverarbeitung",
+year="2016",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="1--22",
+abstract="Die Magnetresonanztomographie (MRT) ist ein in der klinischen Routine etabliertes bildgebendes Verfahren, das auf den Prinzipien der Kernspinresonanz (Magnetresonanz) basiert und Schnittbilder des K{\"o}rpers erzeugt. In diesem Kapitel werden die Grundprinzipien sowie die physikalisch-technischen Grundlagen der Komponenten eines MRT. Bei den Komponenten wird die Rolle der Magnetfeldst{\"a}rke eines supraleitenden oder Permanentmagneten angesprochen, die Bedeutung eines leistungsf{\"a}higen Magnetfeldgradientensystems zur r{\"a}umlichen Zuordnung und die Kombination von Sende- und Empfangsspulen zur Optimierung von Bildqualit{\"a}t und Messzeit. Zum Verst{\"a}ndnis der Grundlagen sind nachfolgend die wichtigsten gewebespezifischen Parameter vorgestellt, die f{\"u}r einen potenziellen Bildkontrast verantwortlich sind. Obwohl die MRT eine extrem sichere Bildgebungsmodalit{\"a}t darstellt, so gibt es doch einige bekannte Gefahrenpunkte f{\"u}r Bedienpersonal und Patient, die zu beachten sind und denen ein eigener Abschnitt gewidmet ist.",
+isbn="978-3-662-45538-8",
+doi="10.1007/978-3-662-45538-8_18-1",
+url="https://doi.org/10.1007/978-3-662-45538-8_18-1"
+}
+
+
+
 %%%%%%%%%%%%%%%%%%%%%%%%
 % Bücher
 %%%%%%%%%%%%%%%%%%%%%%%%
