--- a/documentation/thesis/thesis_acronyms.tex
+++ b/documentation/thesis/thesis_acronyms.tex
@@ -29,6 +29,9 @@
 \newacronym{uuid}{UUID}{Universal Unique Identifier}
 \newacronym{nmr}{NMR}{Nuclear Magnetic Resonance}
 \newacronym{dut}{DUT}{Device Under Test}
+\newacronym{ppm}{ppm}{Parts Per Million}
+\newacronym{snr}{SNR}{Signal to Noise Ratio}
+
 
 
 
