--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -316,12 +316,57 @@ year="2016",
 publisher="Springer Berlin Heidelberg",
 address="Berlin, Heidelberg",
 pages="1--22",
-abstract="Die Magnetresonanztomographie (MRT) ist ein in der klinischen Routine etabliertes bildgebendes Verfahren, das auf den Prinzipien der Kernspinresonanz (Magnetresonanz) basiert und Schnittbilder des K{\"o}rpers erzeugt. In diesem Kapitel werden die Grundprinzipien sowie die physikalisch-technischen Grundlagen der Komponenten eines MRT. Bei den Komponenten wird die Rolle der Magnetfeldst{\"a}rke eines supraleitenden oder Permanentmagneten angesprochen, die Bedeutung eines leistungsf{\"a}higen Magnetfeldgradientensystems zur r{\"a}umlichen Zuordnung und die Kombination von Sende- und Empfangsspulen zur Optimierung von Bildqualit{\"a}t und Messzeit. Zum Verst{\"a}ndnis der Grundlagen sind nachfolgend die wichtigsten gewebespezifischen Parameter vorgestellt, die f{\"u}r einen potenziellen Bildkontrast verantwortlich sind. Obwohl die MRT eine extrem sichere Bildgebungsmodalit{\"a}t darstellt, so gibt es doch einige bekannte Gefahrenpunkte f{\"u}r Bedienpersonal und Patient, die zu beachten sind und denen ein eigener Abschnitt gewidmet ist.",
+abstract="Die Magnetresonanztomographie (MRT) ist ein in der klinischen Routine etabliertes bildgebendes Verfahren, 
+das auf den Prinzipien der Kernspinresonanz (Magnetresonanz) basiert und Schnittbilder des K{\"o}rpers erzeugt. 
+In diesem Kapitel werden die Grundprinzipien sowie die physikalisch-technischen Grundlagen der Komponenten eines MRT. 
+Bei den Komponenten wird die Rolle der Magnetfeldst{\"a}rke eines supraleitenden oder Permanentmagneten angesprochen, die Bedeutung eines leistungsf{\"a}higen Magnetfeldgradientensystems zur r{\"a}umlichen Zuordnung und die Kombination von Sende- und Empfangsspulen zur Optimierung von Bildqualit{\"a}t und Messzeit. Zum Verst{\"a}ndnis der Grundlagen sind nachfolgend die wichtigsten gewebespezifischen Parameter vorgestellt, die f{\"u}r einen potenziellen Bildkontrast verantwortlich sind. Obwohl die MRT eine extrem sichere Bildgebungsmodalit{\"a}t darstellt, so gibt es doch einige bekannte Gefahrenpunkte f{\"u}r Bedienpersonal und Patient, die zu beachten sind und denen ein eigener Abschnitt gewidmet ist.",
 isbn="978-3-662-45538-8",
 doi="10.1007/978-3-662-45538-8_18-1",
 url="https://doi.org/10.1007/978-3-662-45538-8_18-1"
 }
 
+% The entry below contains non-ASCII chars that could not be converted
+% to a LaTeX equivalent.
+@ARTICLE{Arnold2023-cn,
+  title     = "Low‐field {MRI}: Clinical promise and challenges",
+  author    = "Arnold, Thomas Campbell and Freeman, Colbey W and Litt, Brian
+               and Stein, Joel M",
+  abstract  = "Modern MRI scanners have trended toward higher field strengths
+               to maximize signal and resolution while minimizing scan time.
+               However, high‐field devices remain expensive to install and
+               operate, making them scarce outside of high‐income countries and
+               major population centers. Low‐field strength scanners have drawn
+               renewed academic, industry, and philanthropic interest due to
+               advantages that could dramatically increase imaging access,
+               including lower cost and portability. Nevertheless, low‐field
+               MRI still faces inherent limitations in image quality that come
+               with decreased signal. In this article, we review advantages and
+               disadvantages of low‐field MRI scanners, describe hardware and
+               software innovations that accentuate advantages and mitigate
+               disadvantages, and consider clinical applications for a new
+               generation of low‐field devices. In our review, we explore how
+               these devices are being or could be used for high acuity brain
+               imaging, outpatient neuroimaging, MRI‐guided procedures,
+               pediatric imaging, and musculoskeletal imaging. Challenges for
+               their successful clinical translation include selecting and
+               validating appropriate use cases, integrating with standards of
+               care in high resource settings, expanding options with
+               actionable information in low resource settings, and
+               facilitating health care providers and clinical practice in new
+               ways. By embracing both the promise and challenges of low‐field
+               MRI, clinicians and researchers have an opportunity to transform
+               medical care for patients around the world.Level of
+               Evidence5Technical EfficacyStage 6",
+  journal   = "J. Magn. Reson. Imaging",
+  publisher = "Wiley",
+  volume    =  57,
+  number    =  1,
+  pages     = "25--44",
+  month     =  jan,
+  year      =  2023,
+  copyright = "http://creativecommons.org/licenses/by/4.0/",
+  language  = "en"
+}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%
