--- a/documentation/thesis/thesis_references.bib
+++ b/documentation/thesis/thesis_references.bib
@@ -368,6 +368,16 @@ url="https://doi.org/10.1007/978-3-662-45538-8_18-1"
   language  = "en"
 }
 
+@book{inbook,
+author = {Blümler, Peter and Casanova, Federico},
+year = {2016},
+month = {01},
+pages = {133-157},
+title = {CHAPTER 5: Hardware developments: Halbach magnet arrays},
+isbn = {978-1-84973-915-3},
+doi = {10.1039/9781782628095-00133}
+}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%
 % Bücher
